--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -56,7 +56,7 @@
     <!-- 메뉴바 css  -->
   </head>
   <body>
-    
+    <h1>안뇽하세요?</h1>
 <!-- ---------------------- 최상단 메뉴바 -------------------------------- -->
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
