--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -71,7 +71,7 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">이용안내</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">요금안내</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">예약하기</a></li>
-	          <li class="nav-item active"><a href="review.html" class="nav-link">고객센터</a></li>
+	          <li class="nav-item active"><a href="review.jsp" class="nav-link">고객센터</a></li>
 	          <li class="nav-item"><a href="joinUpdate.html" class="nav-link">마이페이지</a></li>
 	        </ul>
 	      </div>
@@ -108,7 +108,7 @@
 
 <nav id="nav">
             <ul>
-                <li><a href="#" onclick="location.href='review.html'">이용후기</a></li>
+                <li><a href="#" onclick="location.href='review.jsp'">이용후기</a></li>
                 <li><a href="#" onclick="location.href='contact.html'">문의하기</a></li>
             </ul>
     </nav>
