--- a/WebContent/pricing.html
+++ b/WebContent/pricing.html
@@ -42,7 +42,7 @@
 	          <li class="nav-item"><a href="info.html" class="nav-link">이용안내</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">요금안내</a></li>
 	          <li class="nav-item active"><a href="pricing.html" class="nav-link">예약하기</a></li>
-	          <li class="nav-item"><a href="review.html" class="nav-link">고객센터</a></li>
+	          <li class="nav-item"><a href="review.jsp" class="nav-link">고객센터</a></li>
 	          <li class="nav-item"><a href="joinUpdate.html" class="nav-link">마이페이지</a></li>
 	        </ul>
 	      </div>
