--- a/Project2/WebContent/pricing.html
+++ b/Project2/WebContent/pricing.html
@@ -129,8 +129,9 @@
 				</select>
 			</p>
 		</div>
-		
-		<input type="submit" value="예약하기" class="btn btn-primary py-3 px-5">
+		<div class="form-group text-center">
+			<input type="submit" value="예약하기" class="btn btn-primary py-3 px-5">
+		</div>
 	</div>
 </div> 
 </form>
