--- a/Project2/WebContent/paymentinfo.html
+++ b/Project2/WebContent/paymentinfo.html
@@ -225,12 +225,12 @@ footer{
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="info.html" class="nav-link">이용안내</a></li>
-	          <li class="nav-item"><a href="services.html" class="nav-link">요금안내</a></li>
-	          <li class="nav-item active"><a href="pricing.html" class="nav-link">예약하기</a></li>
-	          <li class="nav-item"><a href="review.html" class="nav-link">고객센터</a></li>
-	          <li class="nav-item"><a href="joinUpdate.html" class="nav-link">마이페이지</a></li>
+	          <li class="nav-item"><a href="index.jsp" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="info.jsp" class="nav-link">이용안내</a></li>
+	          <li class="nav-item"><a href="services.jsp" class="nav-link">요금안내</a></li>
+	          <li class="nav-item active"><a href="pricing.jsp" class="nav-link">예약하기</a></li>
+	          <li class="nav-item"><a href="reviewIndex.jsp" class="nav-link">고객센터</a></li>
+	          <li class="nav-item"><a href="joinUpdate.jsp" class="nav-link">마이페이지</a></li>
 	        </ul>
 	      </div>
 	    </div>
