--- a/Project2/WebContent/reservUpdate2.html
+++ b/Project2/WebContent/reservUpdate2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>로그인</title>
+    <title>마이페이지> 예약정보</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -66,12 +66,12 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">이용안내</a></li>
-	          <li class="nav-item"><a href="services.html" class="nav-link">요금안내</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">예약하기</a></li>
-	          <li class="nav-item"><a href="review.html" class="nav-link">고객센터</a></li>
-	          <li class="nav-item active"><a href="joinUpdate.html" class="nav-link">마이페이지</a></li>
+	          <li class="nav-item"><a href="index.jsp" class="nav-link">Home</a></li>
+	          <li class="nav-item"><a href="info.jsp" class="nav-link">이용안내</a></li>
+	          <li class="nav-item"><a href="services.jsp" class="nav-link">요금안내</a></li>
+	          <li class="nav-item"><a href="pricing.jsp" class="nav-link">예약하기</a></li>
+	          <li class="nav-item"><a href="reviewIndex.jsp" class="nav-link">고객센터</a></li>
+	          <li class="nav-item active"><a href="joinUpdate.jsp" class="nav-link">마이페이지</a></li>
 	        </ul>
 	      </div>
 	    </div>
