--- a/WebContent/info.html
+++ b/WebContent/info.html
@@ -96,9 +96,9 @@
 						      </tr>
 						      <tr class="text-center">
 						        <td class="bg-primary">운전자 연령</td>
-						        <td>만 26세 이상 (대여일 기준)</td>
-						        <td>만 20세 이상 (대여일 기준)</td>
-						        <td>만 20세 이상 (대여일 기준)</td>
+						        <td>만 21세 이상 (대여일 기준)</td>
+						        <td>만 21세 이상 (대여일 기준)</td>
+						        <td>만 21세 이상 (대여일 기준)</td>
 						      </tr>
 						      <tr class="text-center">
 						        <td class="bg-primary">면허 취득 후 기간</td>
@@ -134,8 +134,12 @@
             					<span class="flaticon-wedding-car"></span>
             				</div>
             				<div class="text w-100">
-                				<h3 class="heading mb-2">1단계</h3>
-                					<p>세부설명</p>
+                				<h3 class="heading mb-2" style="font-size: x-large;">1. 지점 방문</h3>
+                					<p style="font-size: 90%;">
+                					    직원에게 예약번호 또는 <br>
+										예약자 성명을 말씀해주세요.<br>
+										(외국인일 경우 여권 및 국제면허증 지참)
+									</p>
               				</div>
             			</div>
 					</div>
@@ -145,9 +149,14 @@
             				<div class="icon d-flex align-items-center justify-content-center">
             					<span class="flaticon-transportation"></span>
             				</div>
-            				<div class="text w-100">
-                				<h3 class="heading mb-2">2단계</h3>
-                					<p>세부설명</p>
+            				<div class="text w-100" >
+                				<h3 class="heading mb-2" style="font-size: x-large;">2. 고객 정보 확인</h3>
+                					<p style="font-size: 90%;">
+                					   예약사항을 확인 후, <br>
+                					   차량임대차 계약서 작성을 위해 <br>
+                					   면허증을 담당 직원에게 제시해주세요. <br>
+                					   (모바일 PASS 면허는 불가)
+                					</p>
               				</div>
             			</div>
 					</div>
@@ -158,8 +167,12 @@
             					<span class="flaticon-car"></span>
             				</div>
             				<div class="text w-100">
-                				<h3 class="heading mb-2">3단계</h3>
-                					<p>세부설명</p>
+                				<h3 class="heading mb-2" style="font-size: x-large;">3. 대여료 결제</h3>
+                					<p style="font-size: 90%;">
+                					  대여기간 및 차종, 옵션 등 <br>
+                					  최종 확인한 후 <br>
+                					  차량 대여료를 결제해주세요.
+                					</p>
               				</div>
             			</div>
 					</div>
@@ -170,8 +183,12 @@
             					<span class="flaticon-transportation"></span>
             				</div>
             				<div class="text w-100">
-                				<h3 class="heading mb-2">4단계</h3>
-                					<p>세부설명</p>
+                				<h3 class="heading mb-2" style="font-size: x-large;">4. 차량 확인 및 <br> 계약서 작성</h3>
+                					<p style="font-size: 90%;">
+                					  직원을 따라 <br>주차장으로 이동하신 후 <br>
+                					   차량 상태를 확인하시고 <br> 
+                					   차량 임대차 계약서에 서명해주세요.
+                					</p>
               				</div>
             			</div>
 					</div>
@@ -199,8 +216,13 @@
            					<span class="flaticon-wedding-car"></span>
            				</div>
            				<div class="text w-100">
-               				<h3 class="heading mb-2">1단계</h3>
-               					<p>세부설명</p>
+                				<h3 class="heading mb-2" style="font-size: x-large;">1. 지점 방문</h3>
+                					<p style="font-size: 90%;">
+                					   반납지점 주차장에 차량을 주차하고 
+                					   시동을 완전히 끈 후 <br>
+                					   차량 Key와 소지품을 챙겨 <br>
+                					   지점 사무실로 들어갑니다.
+                					</p>
              				</div>
            			</div>
 				</div>
@@ -211,8 +233,11 @@
            					<span class="flaticon-transportation"></span>
            				</div>
            				<div class="text w-100">
-               				<h3 class="heading mb-2">2단계</h3>
-               					<p>세부설명</p>
+                				<h3 class="heading mb-2" style="font-size: x-large;">2. 자동차 키 반납</h3>
+                					<p style="font-size: 90%;">
+                					   담당직원에게 <br>
+                					   차량 Key를 반납하세요.
+                					</p>
              				</div>
            			</div>
 				</div>
@@ -223,8 +248,13 @@
            					<span class="flaticon-car"></span>
            				</div>
            				<div class="text w-100">
-               				<h3 class="heading mb-2">3단계</h3>
-               					<p>세부설명</p>
+                				<h3 class="heading mb-2" style="font-size: x-large;">3. 차량 확인</h3>
+                					<p style="font-size: 90%;">
+                					   담당직원과 함께 <br>
+                					   차량이 주차된 곳으로 이동하여  <br>
+                					   차량 상태, 유류상태 등을 <br>
+                					   확인해 주세요.
+                					</p>
              				</div>
            			</div>
 				</div>
@@ -235,8 +265,13 @@
            					<span class="flaticon-transportation"></span>
            				</div>
            				<div class="text w-100">
-               				<h3 class="heading mb-2">4단계</h3>
-               					<p>세부설명</p>
+                				<h3 class="heading mb-2" style="font-size: x-large;">4. 추가 비용 정산</h3>
+                					<p style="font-size: 90%;">
+                					   반납시간 초과, 차량의 손망실, <br>
+                					   유류비, 범칙금 등 <br>
+                					   추가금이 발생한 경우<br>
+                					   추가비용을 정산해주세요.
+                					</p>
              				</div>
            			</div>
 				</div>
@@ -261,18 +296,19 @@
 <!-- ---------------------- 본문4 -------------------------------- -->
 			<div class="col-md-12 d-flex ftco-animate fadeInUp ftco-animated justify-content-center">
     				<div class="car-list">
+    					롯데렌터카의 모든 차량은 차량 이용 중 사고가 발생하였을 때 아래의 보험 보상범위 내에서 고객님을 보호하기 위해 최선을 다하겠습니다.
 	    				<table class="table text-center">
 						      <tr>
 						        <td class="bg-primary heading">대인</td>
-						        <td>상세 설명</td>
+						        <td>무한</td>
 						      </tr>
 						      <tr>
 						        <td class="bg-primary heading">대물</td>
-						        <td>상세 설명</td>
+						        <td>사고 건당 2천만원</td>
 						      </tr>
 						      <tr>
 						        <td class="bg-primary heading">자손</td>
-						        <td>상세 설명</td>
+						        <td>개인당 1천5백만원 (*계약서상 등록되지 않은 운전자는 종합보험 혜택 불가)</td>
 						      </tr>
 						</table>
 					</div>
