--- a/WebContent/services.html
+++ b/WebContent/services.html
@@ -167,29 +167,16 @@
        		</div>
 <!-- ---------------------- 본문3 -------------------------------- -->
 				<div class="row">
-					<ul>
-						<li>
-							<div class="services services-2 w-100 text-center">
-	            				<div class="icon d-flex align-items-center justify-content-center">
-	            					<span class=""></span>
-	            				</div>
-	            				<dl class="text w-100">
-	            					<dt>  <h3 class="heading mb-2">휴차 보상료</h3> </dt>
-	                				<dd>
-	                					<p>세부설명</p></dd>
-	              				</dl>
-	            			</div>
-            			</li>
-					</ul>
-			
 			
 						<div class="services services-2 w-100 text-center">
-            				<div class="icon d-flex align-items-center justify-content-center">
-            					<span class="compensation fee"></span>
+            				<div class="icon d-flex align-items-center justify-content-center" style="float: left; margin-right: 30px">
+            					<span class="compensation fee" ></span>
             				</div>
-            				<div class="text w-100">
-                				<h3 class="heading mb-2">휴차 보상료</h3>
-                					<p>세부설명</p>
+            				<div class="text w-100" style="margin-top: 45px">
+                				<h3 class="heading mb-2" style="float: left;">휴차 보상료</h3>
+                					<p>세부설명~~~~~~~~~~~~~ 세부설명~~~~~~~~~~~~~세부설명~~~~~~~~~~~~~세부설명~~~~~~~~~~~~~ <br>
+                						세부설명~~~~~~~~~~~~~ 세부설명~~~~~~~~~~~~~세부설명~~~~~~~~~~~~~세부설명~~~~~~~~~~~~~ 
+                					</p>
               				</div>
             			</div>
 					
