아이콘 변경

--- a/WebContent/info.html
+++ b/WebContent/info.html
@@ -296,7 +296,7 @@
 <!-- ---------------------- 본문4 -------------------------------- -->
 			<div class="col-md-12 d-flex ftco-animate fadeInUp ftco-animated justify-content-center">
     				<div class="car-list">
-    					롯데렌터카의 모든 차량은 차량 이용 중 사고가 발생하였을 때 아래의 보험 보상범위 내에서 고객님을 보호하기 위해 최선을 다하겠습니다.
+    					차카차카의 모든 차량은 차량 이용 중 사고가 발생하였을 때 아래의 보험 보상범위 내에서 고객님을 보호하기 위해 최선을 다하겠습니다.
 	    				<table class="table text-center">
 						      <tr>
 						        <td class="bg-primary heading">대인</td>
