요금안내 변경 & 수정까지 완

--- a/WebContent/contact.html
+++ b/WebContent/contact.html
@@ -56,7 +56,7 @@
     <!-- 메뉴바 css  -->
   </head>
   <body>
-    <h1>안뇽하세요?</h1>
+    
 <!-- ---------------------- 최상단 메뉴바 -------------------------------- -->
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
@@ -71,8 +71,8 @@
 	          <li class="nav-item"><a href="about.html" class="nav-link">이용안내</a></li>
 	          <li class="nav-item"><a href="services.html" class="nav-link">요금안내</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">예약하기</a></li>
-	          <li class="nav-item active"><a href="review.html" class="nav-link">고객센터</a></li>
-	          <li class="nav-item"><a href="joinUpdate.html" class="nav-link">마이페이지</a></li>
+	          <li class="nav-item active"><a href="car.html" class="nav-link">고객센터</a></li>
+	          <li class="nav-item"><a href="login.html" class="nav-link">마이페이지</a></li>
 	        </ul>
 	      </div>
 	    </div>
